fix: too much padding on the global style.css file

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,7 @@
+main section * {
+    padding: 15px;
+}
+
 #homepage_body {
    justify-content: center;
 }
